--- a/public/gcintranet/samples/server-fr.html
+++ b/public/gcintranet/samples/server-fr.html
@@ -10,6 +10,18 @@
 		<meta name="robots" content="noindex, nofollow, noarchive">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
+		<!--
+			Remarque : un chemin relatif est utilisé dans cet exemple. Afin d'intégrer les balises de script dans votre code, utilisez le chemin absolu suivant (selon le choix du domaine).
+			Ce chemin peut être utilisé pour les trois noms de fichiers suivants : soyutils.js, wet-en.js et wet-fr.js.
+
+			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
+			templates.service.gc.ca : https://templates.service.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
+
+			Pour pointer vers la version d'exécution :
+
+			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
+			templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
+		-->
 		<script src="../compiled/soyutils.js"></script>
 		<script src="../compiled/wet-fr.js"></script>
 		<noscript>
